<resources>
    <string name="app_name">UglyChatApp</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="type_message">Type message</string>
    <string name="send_message">Send Message</string>
    <string name="logout">Logout</string>
    <string name="hello_world">Hello World</string>
    <string name="couldnt_fetch_users">Couldn\'t fetch users</string>
    <string name="register">Register</string>
    <string name="send_image">Send Image</string>
    <string name="send_audio">Send Audio</string>
    <string name="send_video">Send Video</string>
    <string name="send_file">Send File</string>
</resources>
