<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.RegisterActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/activity_register_ll_input"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:text="@string/register"
        android:textColor="#000000"
        android:textSize="30sp" />

    <LinearLayout
        android:id="@+id/activity_register_ll_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <EditText
            android:id="@+id/activity_register_et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:hint="@string/username"
            android:importantForAutofill="no"
            android:inputType="text" />

        <EditText
            android:id="@+id/activity_register_et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword" />
    </LinearLayout>

    <Button
        android:id="@+id/activity_register_btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/activity_register_ll_input"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/register" />

    <TextView
        android:id="@+id/activity_register_tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/activity_register_btn_register"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/login" />

</RelativeLayout>